--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,8 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": 
+  {
+    "DefaultConnection": "Server=localhost,1433;Database=angular_app;User Id=SA;Password=Password@1;TrustServerCertificate=True"
+  }
 }
