--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": 
   {
-    "DefaultConnection": "Server=localhost,1433;Database=angular_app;User Id=SA;Password=Password@1;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=unix_task;User Id=SA;Password=Password@1;TrustServerCertificate=True"
   }
 }
